8234624: jstack mixed mode should refer DWARF

Reviewed-by: sspitsyn, kevinw